Replaced depreciated code